Added github desc

--- a/TechWeUsed.html
+++ b/TechWeUsed.html
@@ -11,6 +11,9 @@
 
       <div class="Github">
         <h2>Github</h2>
+        <a href="https://github.com/">Github</a>
+        <a href="https://github.com/D-O-G-S/PE-Website-Files">Our Github</a>
+        <p>Github is a cool coding website that can store any files and do other stuff with them</p>
       </div>
 
       <div class="Atom">
