--- a/auth.html
+++ b/auth.html
@@ -23,7 +23,7 @@
     <script type="text/javascript">
       // FirebaseUI config.
       var uiConfig = {
-        signInSuccessUrl: 'LoggedIn.html',
+        signInSuccessUrl: 'dogs-pe.firebase-app.com',
         signInOptions: [
           // Leave the lines as is for the providers you want to offer your users.
           firebase.auth.GoogleAuthProvider.PROVIDER_ID,
@@ -44,7 +44,7 @@
   <body>
     <!-- The surrounding HTML is left untouched by FirebaseUI.
          Your app may use that space for branding, controls and other customizations.-->
-    <h1>Welcome to My Awesome App</h1>
+    <h1>Welcome to DPE</h1>
     <div id="firebaseui-auth-container"></div>
   </body>
 </html>
