--- a/auth.html
+++ b/auth.html
@@ -30,9 +30,9 @@
           firebase.auth.EmailAuthProvider.PROVIDER_ID,
         ],
         // Terms of service url.
-        tosUrl: 'SignUp.html',
+        tosUrl: 'dogs-pe.firebase-app.com',
         // Privacy policy url.
-        privacyPolicyUrl: 'SignUp.html'
+        privacyPolicyUrl: 'dogs-pe.firebase-app.com'
       };
 
       // Initialize the FirebaseUI Widget using Firebase.
