--- a/auth.html
+++ b/auth.html
@@ -23,16 +23,16 @@
     <script type="text/javascript">
       // FirebaseUI config.
       var uiConfig = {
-        signInSuccessUrl: '//dogs-pe.firebaseapp.com',
+        signInSuccessUrl: 'https://dogs-pe.firebaseapp.com',
         signInOptions: [
           // Leave the lines as is for the providers you want to offer your users.
           firebase.auth.GoogleAuthProvider.PROVIDER_ID,
           firebase.auth.EmailAuthProvider.PROVIDER_ID,
         ],
         // Terms of service url.
-        tosUrl: '//dogs-pe.firebaseapp.com',
+        tosUrl: 'https://dogs-pe.firebaseapp.com',
         // Privacy policy url.
-        privacyPolicyUrl: '//dogs-pe.firebaseapp.com'
+        privacyPolicyUrl: 'https://dogs-pe.firebaseapp.com'
       };
 
       // Initialize the FirebaseUI Widget using Firebase.
