--- a/auth.html
+++ b/auth.html
@@ -7,6 +7,7 @@
     <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-auth.js"></script>
     <script>
+      window.location.assign("dogs-pe.firebaseapp.com");
       // Initialize Firebase
       var config = {
         apiKey: "AIzaSyCugvimq8CB4c1Jo2P4n-AHkzGq3OYYq_s",
