--- a/auth.html
+++ b/auth.html
@@ -3,5 +3,7 @@
 <html>
   <head>
     <script>
-      window.location.assign("https://dogs-pe.firebaseapp.com")
+      window.location.assign("https://dogs-pe.firebaseapp.com");
+    </script>
+  </head>
 </html>
