--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     body, html {
       font-family: 'Josefin Sans', sans-serif;
     }
-    .mdl-layout__tab, .mdl-layout__header-row {
+    .mdl-layout__tab:hover, .mdl-layout__header-row:hover {
       font-family: 'Lobster', cursive;
     }
     </style>
