--- a/index.html
+++ b/index.html
@@ -63,7 +63,12 @@
       font-family: 'Josefin Sans', sans-serif;
     }
     .mdl-layout__tab:hover, .mdl-layout__header-row:hover {
+      transition: 1s;
       font-family: 'Lobster', cursive;
+    }
+    .mdl-layout__tab, .mdl-layout__header-row {
+      transition: 1s;
+      font-family: 'Roboto', cursive;
     }
     </style>
   </head>
