--- a/auth.html
+++ b/auth.html
@@ -1,9 +1,8 @@
-
 <!DOCTYPE html>
 <html>
   <head>
     <script>
-      window.location.assign("https://dogs-pe.firebaseapp.com");
+      window.location.replace("https://dogs-pe.firebaseapp.com");
     </script>
   </head>
 </html>
