--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     }
     .mdl-layout__tab, .mdl-layout__header-row {
       transition: 1s;
+      -webkit-transition: 1s;
       font-family: 'Roboto', cursive;
     }
     </style>
