--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
       transition: 1s;
       -webkit-transition: 1s;
       font-family: 'Roboto', cursive;
+      -webkit-transition-delay: 1s; /* Safari */
+      transition-delay: 1s;
     }
     </style>
   </head>
