--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
       font-family: 'Roboto', cursive;
       -webkit-transition-delay: 1s; /* Safari */
       transition-delay: 1s;
+      -webkit-transition-duration: 1s; /* Safari */
+      transition-duration: 1s;
     }
     </style>
   </head>
