--- a/auth.html
+++ b/auth.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <script>
-      window.location.replace("https://dogs-pe.firebaseapp.com/Firebase/LogIn.html");
+      window.location.href = "https://dogs-pe.firebaseapp.com/Firebase/LogIn.html";
     </script>
   </head>
 </html>
